--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -11,6 +11,7 @@
   box-shadow: inset 0 0 2000px rgba(0, 0, 0, 100);
   /*filter: blur(10px);*/
 }
+
 .frostedglass {
   box-shadow: 0 0 1rem 0 #000;
   border-radius: 10px;
@@ -21,6 +22,7 @@
   background-color: rgba(69, 69, 69, 0.3);
   /* backdrop-filter: blur(10px); */
 }
+
 .spaceBG {
   height: 100vh;
   min-height: 100%;
@@ -30,4 +32,32 @@
   background-attachment: fixed;
   background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
     url(https://cdn.rungus.zone/rt/rtbg.webp);
+}
+
+@media screen and (max-width: 960px) {
+  @import url('css/power.css');
+}
+
+.runguszone {
+  font-family: roboto slab, serif
+}
+
+.mt-n {
+  margin-top: -1rem !important
+}
+
+.mb-n {
+  margin-bottom: -.3rem !important
+}
+
+.mb-n2 {
+  margin-bottom: 0 !important
+}
+
+.siteText {
+  font-size: 350%
+}
+
+p {
+  color: #fff
 }
