--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,4 @@
-@media screen and (max-width: 960px) 
-{
-@import url('css/power.css');
-}
-.runguszone{font-family:roboto slab,serif}.mt-n{margin-top:-1rem!important}.mb-n{margin-bottom:-.3rem!important}.mb-n2{margin-bottom:0!important}.siteText{font-size:350%}p{color:#fff}@charset "UTF-8";/*!
+@charset "UTF-8";/*!
  * Bootstrap  v5.3.0 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
