--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Footer from "../components/Footer.astro";
       href="https://cdn.rungus.zone/v4/css/bootstrap.min.css"
     />
   </noscript>
-
+  <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
   <tags>
     <!-- opengraph -->
     <meta property="og:type" content="website" />
