inital work on masonry layout

--- a/src/components/ArchiveList.astro
+++ b/src/components/ArchiveList.astro
@@ -38,7 +38,7 @@ import archives from "../data/archives.json";
   {
     archives.map((archive) => (
       <>
-      <div data-masonry='{"percentPosition": true }'>
+      <div >
         <div class="container item frostedglass">
             <p class="fs-4 runguszone">{archive.category}</p>
             <ul>
