remove random p-1 (yes this is more formatting changes)

--- a/src/components/ArchiveList.astro
+++ b/src/components/ArchiveList.astro
@@ -41,7 +41,7 @@ import archives from "../data/archives.json";
         <>
           <div class="col-6 pb-2">
             <div class="frostedglass container">
-              <p class="fs-3 runguszone p-1 mb-n">{archive.category}</p>
+              <p class="fs-3 runguszone mb-n">{archive.category}</p>
               <ul>
                 {archive.links.map((link) => (
                   <li>
