darken links a bit

--- a/src/components/ArchiveList.astro
+++ b/src/components/ArchiveList.astro
@@ -5,7 +5,7 @@ import archives from "../data/archives.json";
 <style>
   li {
     font-size: 145%;
-    color: white;
+    color: #dedede; /* https://images.gamebanana.com/img/ss/mods/58c87d7073cdf.jpg */
     font-family:
       roboto slab,
       serif;
