lot of changes check description
-add the eye link back
-serve masonry dependency more "securely"
-add RT: Relationship Goals
-make nicer 404 page
-change document link to a read only version to discourage abuse
-removed herobrine

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import Countdown from "./Countdown.svelte";
           >Join the Discord!</a
         >
         - <a
-          href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/edit?usp=sharing"
+          href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/preview#gid=1040887463"
           class="alert-link">Source Document</a
         >
         - <a
