--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -98,8 +98,13 @@ import Footer from "../components/Footer.astro";
 
   <body>
     <div class="container-fluid z-n1 position-absolute">
-      <div class="container">
-        <h1>404</h1>
+      <div class="container mt-3">
+        <div class="frostedglass">
+          <p class="runguszone text-center fs-1">
+            404 - that doesnt exist
+          </p>
+          <p class="text-center runguszone fs-3"><a href="https://archiveofpimps.com" class="alert-text text-center runguszone">click here to go back home</a></p>
+          </div>
       </div>
     </div>
   </body>
