--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Footer from "../components/Footer.astro";
       href="https://cdn.rungus.zone/v4/css/bootstrap.min.css"
     />
   </noscript>
-  <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+  <script src="https://cdn.rungus.zone/js/masonry.pkgd.min.js"></script>
   <tags>
     <!-- opengraph -->
     <meta property="og:type" content="website" />
