--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,8 @@
 <rowarea class="row">
   <div class="container mt-3 mb-3 frostedglass col">
+    <p class="text-center runguszone mt-1" style="font-size:135%">Some RT YouTube Channels were also backed up on The Eye. <br>
+      <a class="alert-link" href="https://the-eye.eu/roosteretal/">Click here to check it out!</a></p>
+    <hr>
     <p class="text-center runguszone fs-1">
       Please donate to the Internet Archive!<br />
       <span class="fs-5">Hosting all this cannot be cheap!</span><br />
