--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,6 +30,9 @@ import Footer from "../components/Footer.astro";
       href="https://cdn.rungus.zone/v4/css/bootstrap.min.css"
     />
   </noscript>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
   <script src="https://cdn.rungus.zone/js/masonry.pkgd.min.js"></script>
   <tags>
     <!-- opengraph -->
