--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Countdown from "./Countdown.svelte";
 
 <pagelogo>
   <div class="row">
-    <div class="frostedglass mt-3 mb-3 pb-2">
+    <div class="container frostedglass mt-3 mb-3 pb-2">
       <p class="text-center m-0 runguszone siteText">Archive of Pimps</p>
       <p class="fs-5 text-center runguszone">
         The Rooster Teeth Archival Project
