--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,22 +18,11 @@ import Footer from "../components/Footer.astro";
   <meta charset="utf-8" />
   <meta name="description" content="Archiving Every* RT Video" />
   <!-- defer load of big stylesheet -->
-  <link
-    rel="preload"
-    href="https://cdn.rungus.zone/v4/css/bootstrap.min.css"
-    as="style"
-    onload="this.onload=null;this.rel='stylesheet'"
-  />
-  <noscript>
-    <link
-      rel="stylesheet"
-      href="https://cdn.rungus.zone/v4/css/bootstrap.min.css"
-    />
-  </noscript>
+  <link href="https://cdn.rungus.zone/v4/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-  <script src="https://cdn.rungus.zone/js/masonry.pkgd.min.js"></script>
+  
   <tags>
     <!-- opengraph -->
     <meta property="og:type" content="website" />
