update footer link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,13 +23,13 @@
     <span class="runguszone"
       ><a href="https://rungus.zone/terms" class="alert-link">tos</a><br />
       <a
-        href="https://github.com/runguszone/roosterteeth-archival-website"
+        href="https://github.com/rungulus/roosterteeth-archival-website"
         class="alert-link"
         >this site doesn't update automatically, wanna help out?</a
       >
       <span class="alert-link"></span>
       <span class="float-end"
-        >❤, <a href="https://rungus.zone" style="color:azure;">rungus</a>, <a
+        >❤, <a href="https://github.com/rungulus" style="color:azure;">rungus</a>, <a
           href="https://www.instagram.com/undeadmatrix"
           style="color:azure;">undeadmatrix</a
         > & <a href="https://github.com/tgb20" style="color:azure;">tgb20</a
