--- a/src/components/ChannelPlaylists.astro
+++ b/src/components/ChannelPlaylists.astro
@@ -4,7 +4,7 @@ import channels from "../data/playlists.json";
 
 <style>
   li {
-    font-size: 145%;
+    font-size: 100%;
     color: #dedede; /* https://images.gamebanana.com/img/ss/mods/58c87d7073cdf.jpg */
     font-family:
       roboto slab,
@@ -12,11 +12,11 @@ import channels from "../data/playlists.json";
   }
 </style>
 <div class="grid-container">
-  <div class="row" data-masonry='{"percentPosition": true }'>
+  <div class="row">
     {
       channels.map((channel) => (
         <>
-          <div class="col-6 pb-2">
+          <div class="col-12 pb-2">
             <div class="frostedglass container" id={channel.channel_name}>
               <p class="fs-2 runguszone mb-n">{channel.channel_name}</p>
                 {channel.playlists.map((playlist) => (
@@ -25,7 +25,7 @@ import channels from "../data/playlists.json";
                     <div id={playlist.title}>
                       <ol>
                         {playlist.videos.map((video) => (
-                          <li><a class="alert-link runguszone" href={video.url}>{video.title}</a></li>
+                          <li class="playlist-link"><a class="alert-link runguszone playlist-link" href={video.url}>{video.title}</a></li>
                         ))}
                       </ol>
                     </div>
