--- a/src/components/ChannelPlaylists.astro
+++ b/src/components/ChannelPlaylists.astro
@@ -13,6 +13,9 @@ import channels from "../data/playlists.json";
 </style>
 <div class="grid-container">
   <div class="row">
+    <h4>Note: Not all links have had the corresponding item archived yet</h4>
+  </div>
+  <div class="row">
     {
       channels.map((channel) => (
         <>
