--- a/src/pages/playlists.astro
+++ b/src/pages/playlists.astro
@@ -3,6 +3,7 @@ import "../styles/custom.css";
 import "../styles/main.css";
 
 import ChannelPlaylists from "../components/ChannelPlaylists.astro";
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en" data-bs-theme="dark" class="spaceBG">
@@ -100,6 +101,12 @@ import ChannelPlaylists from "../components/ChannelPlaylists.astro";
   <body>
     <div class="container-fluid z-n1 position-absolute">
       <div class="container">
+        <Header />
+        <div class="row">
+          <div class="container col frostedglass mb-1 mt-1">
+            <p class="runguszone fs-4 text-center">Note: Not all links have had the corresponding item archived yet</p>
+          </div>
+        </div>
         <ChannelPlaylists />
       </div>
     </div>
