--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,6 +103,10 @@ import Footer from "../components/Footer.astro";
     <div class="container-fluid z-n1 position-absolute">
       <div class="container">
         <Header />
+        <div class="container mb-2 frostedglass col">
+          <p class="text-center runguszone mt-1" style="font-size:135%">Some RT YouTube Channels were also backed up on Ragtag Archive. <br>
+            <a class="alert-link" href="https://roosteretal-archive.ragtag.moe/">Click here to check it out!</a></p>
+            </div>
         <ArchiveList />
         <Footer />
       </div>
