--- a/src/pages/playlists.astro
+++ b/src/pages/playlists.astro
@@ -4,6 +4,7 @@ import "../styles/main.css";
 
 import ChannelPlaylists from "../components/ChannelPlaylists.astro";
 import Header from "../components/Header.astro";
+
 ---
 
 <html lang="en" data-bs-theme="dark" class="spaceBG">
@@ -104,7 +105,7 @@ import Header from "../components/Header.astro";
         <Header />
         <div class="row">
           <div class="container col frostedglass mb-1 mt-1">
-            <p class="runguszone fs-4 text-center">Note: Not all links have had the corresponding item archived yet</p>
+            <p class="runguszone fs-4 text-center mt-1 mb-1">Note: Not all links have had the corresponding item archived yet</p>
           </div>
         </div>
         <ChannelPlaylists />
