--- a/src/components/ChannelPlaylists.astro
+++ b/src/components/ChannelPlaylists.astro
@@ -12,8 +12,10 @@ import channels from "../data/playlists.json";
   }
 </style>
 <div class="grid-container">
-  <div class="row">
-    <h4>Note: Not all links have had the corresponding item archived yet</h4>
+  <div class="row mt-1">
+    <div class="container mb-2 frostedglass col">
+      <p class="text-center runguszone mt-1 mb-1" style="font-size:135%">This page has been populated based on the playlists of the official YouTube channels</p>
+    </div>
   </div>
   <div class="row">
     {
