--- a/src/components/ChannelPlaylists.astro
+++ b/src/components/ChannelPlaylists.astro
@@ -14,7 +14,8 @@ import channels from "../data/playlists.json";
 <div class="grid-container">
   <div class="row mt-1">
     <div class="container mb-2 frostedglass col">
-      <p class="text-center runguszone mt-1 mb-1" style="font-size:135%">This page has been populated based on the playlists of the official YouTube channels</p>
+      <p class="text-center runguszone mt-1 mb-n fs-5">This page has been populated based on the playlists of the official YouTube channels</p>
+      <p class="text-center runguszone fs-5 mb-1"><a class="alert-link" href="https://archiveofpimps.com">Click here to view by series</a></p>
     </div>
   </div>
   <div class="row">
