add archival progress link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,6 +26,10 @@ import Countdown from "./Countdown.svelte";
           href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/preview#gid=1040887463"
           class="alert-link">Source Document</a
         >
+        - <a
+          href="https://shiruken.github.io/rt-archive/"
+          class="alert-link">Archival Progress</a
+        >
       </p>
     </div>
   </div>
