--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,14 +23,21 @@ import Countdown from "./Countdown.svelte";
           >Join the Discord!</a
         >
         - <a
-          href="https://docs.google.com/spreadsheets/d/10g_7wKA2DEsoWWnG_RG-IyoZf3QEdIv8X97bUbrK5-E/preview#gid=1040887463"
-          class="alert-link">Source Document</a
-        >
-        - <a
           href="https://shiruken.github.io/rt-archive/"
           class="alert-link">Archival Progress</a
         >
       </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="container mb-2 frostedglass col">
+      <p
+        class="text-center runguszone mt-1 mb-n2"
+        style="font-size:135%"
+      ><a href="https://archiveofpimps.com" class="alert-link">Archives by Show</a> - <a href="https://archiveofpimps.com/playlists" class="alert-link">Archives by Playlist</a>
+      </p>
+      <hr class="m-0">
+      <p class="runguszone text-center m-1">The vast majority of content is now on the Internet Archive, but it still needs to be organized! If you'd like to help out, join our Discord!</p>
     </div>
   </div>
 
