--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -32,7 +32,8 @@
         >❤, <a href="https://github.com/rungulus" style="color:azure;">rungus</a>, <a
           href="https://www.instagram.com/undeadmatrix"
           style="color:azure;">undeadmatrix</a
-        > & <a href="https://github.com/tgb20" style="color:azure;">tgb20</a
+        >, <a href="https://github.com/tgb20" style="color:azure;">tgb20</a
+        > & <a href="https://x.com/MrSheen96" style="color:azure;">MrSheen</a
         ></span
       ><br /></span
     >
