update links for archive progeress

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,13 +18,18 @@ import Countdown from "./Countdown.svelte";
         Archiving everything Rooster Teeth because WB <em>cannot be trusted!</em
         >
       </p>
-      <p class="text-center runguszone mb-n mt-n fs-5">
+      <p class="text-center runguszone mt-n fs-4">
         <a href="https://discord.gg/SHCURNvG8v" class="alert-link"
           >Join the Discord!</a
         >
+      </p>
+      <p class="text-center runguszone mb-n mt-n fs-5">
+        <a href="https://docs.google.com/spreadsheets/d/17Vqd_xYLh-xma_nw_TkeFexzQ2sZ4uEntibiZB8KlRI/edit?usp=sharing" class="alert-link"
+          >YouTube Archival Progress</a
+        >
         - <a
           href="https://shiruken.github.io/rt-archive/"
-          class="alert-link">Archival Progress</a
+          class="alert-link">RT Site Archival Progress</a
         >
       </p>
     </div>
