--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,6 +17,9 @@
     <p class="runguszone text-center small mb-n2 mt-n">
       Thanks for everything, RT ❤
     </p>
+<p class="runguszone text-center small mb-n2 mt-n">
+      damn you, carolina.
+    </p>
     <p class="runguszone text-center mb-n">
       All content linked on this page is property of their respective owners
     </p><br />
