--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,11 +14,11 @@
 </rowarea>
 <rowarea class="row">
   <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
-    <p class="runguszone text-center small mb-n2 mt-n">
+    <p class="runguszone text-center small mt-n">
       Thanks for everything, RT ❤
     </p>
-<p class="runguszone text-center small mb-n2 mt-n">
-      damn you, carolina.
+<p class="runguszone text-center small mb-n2">
+      damn you, cAROLINA.
     </p>
     <p class="runguszone text-center mb-n">
       All content linked on this page is property of their respective owners
