--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,7 @@
 </rowarea>
 <rowarea class="row">
   <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
-    <p class="runguszone text-center small mt-n">
+    <p class="runguszone text-center small mb-n2 mt-n">
       Thanks for everything, RT ❤
     </p>
 <p class="runguszone text-center small mb-n2">
