prepare for landing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,29 +14,23 @@
 </rowarea>
 <rowarea class="row">
   <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
-    <p class="runguszone text-center small mb-n2 mt-n">
-      Thanks for everything, RT ❤
-    </p>
-<p class="runguszone text-center small mb-n2">
-      damn you, cAROLINA.
-    </p>
-    <p class="runguszone text-center mb-n">
-      All content linked on this page is property of their respective owners
-    </p><br />
+    <p class="runguszone text-center small mb-n2 mt-n"></p>
+    <p class="runguszone text-center small mb-n2"></p><br />
     <span class="runguszone"
-      ><a href="https://rungus.zone/terms" class="alert-link">tos</a><br />
-      <a
-        href="https://github.com/rungulus/roosterteeth-archival-website"
-        class="alert-link"
-        >this site doesn't update automatically, wanna help out?</a
+      ><a href="#" class="alert-link text-decoration-none"
+        >Thanks for everything, RT ❤</a
+      ><br />
+      <a href="#" class="alert-link text-decoration-none">damn you, cAROLINA.</a
       >
       <span class="alert-link"></span>
       <span class="float-end"
-        >❤, <a href="https://github.com/rungulus" style="color:azure;">rungus</a>, <a
-          href="https://www.instagram.com/undeadmatrix"
-          style="color:azure;">undeadmatrix</a
-        >, <a href="https://github.com/tgb20" style="color:azure;">tgb20</a
-        > & <a href="https://x.com/MrSheen96" style="color:azure;">MrSheen</a
+        >❤, <a href="https://github.com/rungulus" style="color:azure;"
+          >rungus</a
+        >, <a href="https://www.instagram.com/undeadmatrix" style="color:azure;"
+          >undeadmatrix</a
+        >, <a href="https://github.com/tgb20" style="color:azure;">tgb20</a> & <a
+          href="https://x.com/MrSheen96"
+          style="color:azure;">MrSheen</a
         ></span
       ><br /></span
     >
