--- a/src/components/ChannelPlaylists.astro
+++ b/src/components/ChannelPlaylists.astro
@@ -29,6 +29,15 @@ import channels from "../data/playlists.json";
       serif;
   }
 </style>
+<div class="row">
+  <div class="container mb-2 frostedglass col">
+    <p
+      class="text-center runguszone mt-1 mb-n2"
+      style="font-size:135%"
+    ><a href="https://archiveofpimps.com/shows" class="alert-link">Archives by Show</a> - <a href="https://archiveofpimps.com/playlists" class="alert-link">Archives by Playlist</a>
+    </p>
+  </div>
+</div>
 <div class="grid-container">
   <div class="row">
     {
