--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,6 @@ import "../styles/custom.css";
 import "../styles/main.css";
 
 import Header from "../components/Header.astro";
-import ArchiveList from "../components/ArchiveList.astro";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -107,19 +106,40 @@ import Footer from "../components/Footer.astro";
       <div class="container">
         <Header />
         <div class="row">
-          <div class="row">
-            
-          </div>
-          <ArchiveList />
           <div class="container mb-2 frostedglass col">
-            <p class="text-center runguszone mt-1" style="font-size:135%">
-              Some RT YouTube Channels were also backed up on Ragtag Archive. <br
-              />
-              <a
-                class="alert-link"
-                href="https://roosteretal-archive.ragtag.moe/"
-                >Click here to check it out!</a>
-            </p>
+            <p class="text-center runguszone mt-2" style="font-size:135%">
+              <a href="https://rtarchive.org/" class="alert-link fs-1 mb-n badge text-bg-primary">Enter the RT Archive</a>
+              <p class="text-center fs-5">See, Search, and Watch all your favorites! You can also search by video transcript!
+          </div>
+        </div>
+        <div class="row">
+          <div class="container mb-2 frostedglass col-auto">
+            <p class="text-center runguszone mt-1 fs-3">
+              Other Fun Stuff <br>
+              <a href="https://archiveofpimps.com/shows" class="text-center alert-link fs-3 badge text-bg-secondary mb-1">Legacy AoP</a>
+              <a href="https://shiruken.github.io/rt-archive/" class="alert-link fs-3 badge text-bg-warning mt-1">Metadata</a>   
+              <a href="https://docs.google.com/spreadsheets/d/17Vqd_xYLh-xma_nw_TkeFexzQ2sZ4uEntibiZB8KlRI/edit?usp=sharing" class="alert-link fs-3 badge text-bg-danger">Checklist</a>
+              <a href="https://discord.gg/SHCURNvG8v" class="alert-link fs-3 badge text-bg-info">Discord</a>
+              <hr>
+              <p class="text-center runguszone mt-1 mb-n" style="font-size:135%">
+                Shoutouts</p>
+                <br>
+                <p class="text-center mt-n">Thank you everyone on the Discord for helping us out!<br>
+                  Special Thanks to 
+                  <a href="https://twitter.com/MrSheen96" class="alert-link">MrSheen</a>, 
+                  <a href="https://twitter.com/KneelToGreen" class="alert-link">KneeltoGreen</a>, 
+                  <a href="https://github.com/rungulus" class="alert-link">rungus</a>, 
+                  Carpal, 
+                  shiruken, 
+                  schmintendo, 
+                  <a href="https://www.reddit.com/user/Madog24/" class="alert-link">Madog24</a>, 
+                  RatchetsRevenge, 
+                  LoopsPls, 
+                  <a href="https://www.instagram.com/undeadmatrix" class="alert-link">undeadmatrix</a>,
+                  <a href="https://github.com/tgb20" class="alert-link">tgb20</a>, 
+                  Jason Scott, 
+                  and The Archivist!<br>
+              And of course, thank you to Rooster Teeth who brought us 21 years worth of content to enjoy! ❤</p>
           </div>
         </div>
         <Footer />
