--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,7 +131,7 @@ import Footer from "../components/Footer.astro";
                   <a href="https://github.com/rungulus" class="alert-link">rungus</a>, 
                   Carpal, 
                   shiruken, 
-                  schmintendo, 
+                  <a href="https://www.reddit.com/user/schmintendo" class="alert-link">schmintendo</a>, 
                   <a href="https://www.reddit.com/user/Madog24/" class="alert-link">Madog24</a>, 
                   RatchetsRevenge, 
                   LoopsPls, 
