add shiruken link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,15 +130,15 @@ import Footer from "../components/Footer.astro";
                   <a href="https://twitter.com/KneelToGreen" class="alert-link">KneeltoGreen</a>, 
                   <a href="https://github.com/rungulus" class="alert-link">rungus</a>, 
                   Carpal, 
-                  shiruken, 
+                  <a href="https://www.reddit.com/user/shiruken/" class="alert-link">shiruken</a>, 
                   <a href="https://www.reddit.com/user/schmintendo" class="alert-link">schmintendo</a>, 
                   <a href="https://www.reddit.com/user/Madog24/" class="alert-link">Madog24</a>, 
                   RatchetsRevenge, 
                   LoopsPls, 
                   <a href="https://www.instagram.com/undeadmatrix" class="alert-link">undeadmatrix</a>,
                   <a href="https://github.com/tgb20" class="alert-link">tgb20</a>, 
-                  Jason Scott, 
-                  and The Archivist!<br>
+                  <a href="http://textfiles.com/" class="alert-link">Jason Scott</a>, 
+                  and <a href="https://www.reddit.com/user/-Archivist" class="alert-link">-Archivist</a>!<br>
               And of course, thank you to Rooster Teeth who brought us 21 years worth of content to enjoy! ❤</p>
           </div>
         </div>
