local man hates css

--- a/src/pages/shows.astro
+++ b/src/pages/shows.astro
@@ -107,6 +107,15 @@ import Footer from "../components/Footer.astro";
       <div class="container">
         <Header />
         <div class="row">
+          <div class="container mb-2 frostedglass col">
+            <p
+              class="text-center runguszone mt-1 mb-n2"
+              style="font-size:135%"
+            ><a href="https://archiveofpimps.com/shows" class="alert-link">Archives by Show</a> - <a href="https://archiveofpimps.com/playlists" class="alert-link">Archives by Playlist</a>
+            </p>
+          </div>
+        </div>
+        <div class="row">
           <div class="row">
             
           </div>
