--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,6 @@
+---
+import Countdown from "./Countdown.svelte";
+---
 <rowarea class="row">
   <div class="container mt-3 mb-3 frostedglass col">
     <!-- <p class="text-center runguszone mt-1" style="font-size:135%">Some RT YouTube Channels were also backed up on Ragtag Archive. <br>
@@ -14,8 +17,8 @@
 </rowarea>
 <rowarea class="row">
   <div class="container mb-3 pb-2 frostedglass pt-3 col" style="color:azure;">
-    <p class="runguszone text-center small mb-n2 mt-n"></p>
-    <p class="runguszone text-center small mb-n2"></p><br />
+    <p class="runguszone text-center small mb-n2 mt-n"><Countdown client:only /></p>
+<hr />
     <span class="runguszone"
       ><a href="#" class="alert-link text-decoration-none"
         >Thanks for everything, RT ❤</a
