--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en" data-bs-theme="dark" class="spaceBG">
-<script> if (location.protocol !== 'https:') {
+<script> 
+if (location.protocol !== 'https:') {
     location.replace(`https:${location.href.substring(location.protocol.length)}`);
 }
 </script>
